--- a/inventario/templates/eliminar_producto.html
+++ b/inventario/templates/eliminar_producto.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+
+{% block title %}Agregar Producto - Tecknosfera{% endblock %}
+
+{% block content %}
 <h2>Eliminar Producto</h2>
 <p>¿Seguro que quieres eliminar el producto "{{ producto.nombre }}"?</p>
 <form method="post">
