--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,3 +1,20 @@
+main {
+    background: var(--main);
+    border-radius: 18px;
+    box-shadow: var(--box-shadow);
+    padding: 48px 52px 48px 52px;
+    min-height: 60vh;
+    min-width: 600px;
+    width: fit-content;
+    margin: 42px auto 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: width 0.2s, padding 0.2s;
+    overflow-x: auto;
+}
+
+
 /* ... tu CSS general ... */
 
 .inventario-box {
