--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}Inicio Tecknosfera{% endblock %}
 
 {% block content %}
-    <h2>¡Bienvenido!</h2>
+    <h2>¡Bienvenido Control Suministros Tecknosfera!</h2>
     <p>Mi app está funcionando correctamente.</p>
     <p>Usa los botones de arriba para navegar por el sistema.</p>
 {% endblock %}
